[project]
name = "test-roslibpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "matplotlib>=3.10.3",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "roslibpy>=1.8.1",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
